# globlin

./: .envrc  .gitignore  .mcp.json  .mcp.json.license  CHANGELOG.md  CLAUDE.md  Cargo.lock.license  Cargo.toml  README.md  conftest.py  flake.nix  pyproject.toml  zensical.toml
.claude/: CLAUDE.md
.claude/skills/verify/: SKILL.md
.github/workflows/: CI.yml
.serena/: .gitignore  project.yml
crates/globlin/: Cargo.toml
crates/globlin/benches/: fnmatch.rs
crates/globlin/examples/: slow.rs
crates/globlin/src/: lib.rs
crates/python_binding/: Cargo.toml
crates/python_binding/src/: lib.rs
docs/: api-reference.md  changelog.md  guide.md  index.md  migration.md
docs/images/: logo.png.license
docs/snippets/: installation.md
docs/stylesheets/: mkdocstrings.css
fuzz/: Cargo.lock.license  Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
python/globlin/: __init__.py  __init__.pyi  globlin.pyi
src/: lib.rs
tests/: test_flags.py  test_fnmatch.py  test_glob.py
