# SPDX-FileCopyrightText: 2025 László Vaskó <opensource@vlaci.email.com>
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
resolver = "2"
members = [
 "crates/globlin",
 "crates/python_binding",
]
default-members = ["crates/globlin"]

[workspace.package]
edition = "2021"
version = "0.2.1"

[workspace.dependencies]
globlin = { path = "crates/globlin" }

pyo3 = "0.27.1"

[profile.release]
debug = true
