# SPDX-FileCopyrightText: 2025 László Vaskó <opensource@vlaci.email.com>
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
resolver = "2"
members = [
 "fuzz",
 "crates/globlin",
 "crates/python_binding",
]
default-members = ["crates/globlin"]

[workspace.package]
edition = "2021"
version = "0.2.1"

[workspace.dependencies]
globlin = { path = "crates/globlin" }

pyo3 = "0.27.1"

criterion = { version = "0.8.0", features = ["html_reports"] }

[profile.release]
debug = true

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
