# SPDX-FileCopyrightText: 2025 László Vaskó <opensource@vlaci.email.com>
#
# SPDX-License-Identifier: EUPL-1.2

[project]
name = "globlin"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
description = "A featureful fnmatch implementation"
license = "EUPL-1.2"
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://vlaci.github.io/globlin"
Repository = "https://github.com/vlaci/globlin"
Changelog = "https://github.com/vlaci/globlin/blob/main/CHANGELOG.md"

[dependency-groups]
dev = ["maturin-import-hook==0.3.0", "ruff==0.14.4"]
test = ["pytest==9.0.1"]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py39"]
python-source = "python"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
select = [
  "A",      # flake8-builtins
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "C90",    # mccabe
  "C4",     # flake8-comprehensions
  "COM818", # flake8-commas; trailing-comma-on-bare-tuple
  "D",      # pydocstyle
  "E",      # pycodestyle (errors)
  "F",      # pyflakes
  "G",      # flake8-logging-format
  "I",      # isort
  "N",      # pep8-naming
  "PIE",    # flake8-pie
  "PYI",    # flake8-pyi
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "RET",    # flake8-return
  "RUF",    # ruff's own lints
  "RSE",    # flake8-raise
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "SLF",    # flake8-self
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TCH",    # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "W",      # pycodestyle (warnings)
]

ignore = [
  "D203",   # one-blank-line-before-class:    D211 (no-blank-line-before-class) is used instead
  "D213",   # multi-line-summary-second-line: D212 (multi-line-summary-first-line) is used instead
  "E501",   # line-too-long:                  Let black handle line length violations
  "PYI021", # docstring-in-stub:              We document in the stub
  "UP006",  # non-pep585-annotation:          For Python 3.8 compatibility
  "UP007",  # non-pep604-annotation:          For Python 3.8 compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101", # assert:                         Enable usage of asserts
  "D1",   # undocumented-*
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["globlin"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"
